// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format apex: CommentsDanglingInBlockStatement.cls: CommentsDanglingInBlockStatement.cls 1`] = `
class CommentDanglingInBlockStatement {
  public void emptyMethod() {
    // Inline Comment

    /* Block Comment */


    // Second Inline Comment
    /* Second Block Comment */

  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class CommentDanglingInBlockStatement {
  public void emptyMethod() {
    // Inline Comment

    /* Block Comment */

    // Second Inline Comment
    /* Second Block Comment */
  }
}

`;

exports[`Format apex: CommentsDanglingInClass.cls: CommentsDanglingInClass.cls 1`] = `
class DanglingCommentsInClass {
  // Inline Comment

  /* Block Comment */


  // Second Inline Comment
  /* Second Block Comment */

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class DanglingCommentsInClass {
  // Inline Comment

  /* Block Comment */

  // Second Inline Comment
  /* Second Block Comment */
}

`;

exports[`Format apex: CommentsDanglingInEnum.cls: CommentsDanglingInEnum.cls 1`] = `
enum DanglingCommentsInEnum {
  // Inline Comment

  /* Block Comment */


  // Second Inline Comment
  /* Second Block Comment */

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
enum DanglingCommentsInEnum {
  // Inline Comment

  /* Block Comment */

  // Second Inline Comment
  /* Second Block Comment */
}

`;

exports[`Format apex: CommentsDanglingInInterface.cls: CommentsDanglingInInterface.cls 1`] = `
interface DanglingCommentsInInterface {
  // Inline Comment

  /* Block Comment */


  // Second Inline Comment
  /* Second Block Comment */

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
interface DanglingCommentsInInterface {
  // Inline Comment

  /* Block Comment */

  // Second Inline Comment
  /* Second Block Comment */
}

`;

exports[`Format apex: CommentsDanglingInTrigger.cls: CommentsDanglingInTrigger.cls 1`] = `
trigger myAccountTrigger on Account(before delete) {
  // Inline Comment

  /* Block Comment */


  // Second Inline Comment
  /* Second Block Comment */

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
trigger myAccountTrigger on Account(before delete) {
  // Inline Comment

  /* Block Comment */

  // Second Inline Comment
  /* Second Block Comment */
}

`;
